--- a/disk-utils/elvtune.8
+++ b/disk-utils/elvtune.8
@@ -17,42 +17,44 @@ elvtune \- I/O elevator tuner
 .B elvtune \-v
 .SH DESCRIPTION
 .B elvtune
-allows to tune the I/O elevator per blockdevice queue basis. The
-tuning can be safely done at runtime. Tuning the elevator means
-being able to change disk performance and interactiveness. In the
-output of elvtune the address of the queue tuned will be shown
-and it can be considered as a queue ID.
-For example multiple partitions in the same harddisk will
+allows to tune the I/O elevator per blockdevice queue.  The
+tuning can be safely done at runtime.  Tuning the elevator means
+being able to change disk performance and interactiveness.
+In the output of
+.B elvtune
+the address of the queue tuned will be shown;
+it can be considered as a queue ID.
+Multiple partitions on the same harddisk will
 share the same queue and so tuning one partition will be
 like tuning the whole HD.
 .SH OPTIONS
 .TP
 .BI -r \ r_lat
-set the max latency that the I/O scheduler will provide on
+Set the maximum latency that the I/O scheduler will provide on
 each read.
 .TP
 .BI -w \ w_lat
-set the max latency that the I/O scheduler will provide on
+Set the maximum latency that the I/O scheduler will provide on
 each write.
 .TP
 .BI -b \ b_max
-max coalescing factor allowed on writes when there are reads
+Set the maximum coalescing factor allowed on writes when there are reads
 pending in the queue.
 .TP
 .BI -h
-help.
+Display help text and exit.
 .TP
 .BI -v
-version.
+Display version version information and exit.
 .SH NOTE
-Actually the only fields tunable are those relative
-to the IO scheduler. It's not possible to select
+Actually, the only fields tunable are those relative
+to the IO scheduler.  It's not possible to select
 a one-way or two-way elevator yet.
 .PP
 For logical blockdevices like LVM the tuning has to
 be done on the
 .I physical
-devices. Tuning the queue of the LVM logical device
+devices.  Tuning the queue of the LVM logical device
 is useless.
 .SH RETURN VALUE
 0 on success and 1 on failure.
