flock: fix example in man page
Reported-by: Pierre Gaston <pierre.gaston@gmail.com>
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/sys-utils/flock.1
+++ b/sys-utils/flock.1
@@ -51,7 +51,7 @@ used the following manner:
 .PP
 \fC(
 .br
-  flock -n 9
+  flock -n 9 || exit 1
 .br
   # ... commands executed under lock ...
 .br
