--- a/misc-utils/lsblk.8
+++ b/misc-utils/lsblk.8
@@ -60,6 +60,9 @@ Use the raw output format.
 .IP "\fB\-t, \-\-topology\fP"
 Output info about block device topology.
 This option is equivalent to "-o NAME,ALIGNMENT,MIN-IO,OPT-IO,PHY-SEC,LOG-SEC,ROTA,SCHED".
+.SH NOTES
+For the partitions are some information (e.g. queue attributes) inherited from
+parental device.
 .SH AUTHORS
 .nf
 Milan Broz <mbroz@redhat.com>
