--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+util-linux 2.20: Aug 29 2011
+* see docs/v2.20-ReleaseNotes or complete changelog at
+  ftp://ftp.kernel.org/pub/linux/utils/util-linux/v2.20/v2.20-ChangeLog
+
 util-linux 2.20-rc2: Aug 17 2011
 * see docs/v2.20-ReleaseNotes or complete changelog at
   ftp://ftp.kernel.org/pub/linux/utils/util-linux/v2.20/v2.20-rc2-ChangeLog
