sfdisk.8: fix formatting
Signed-off-by: Petr Uzel <petr.uzel@suse.cz>

--- a/fdisk/sfdisk.8
+++ b/fdisk/sfdisk.8
@@ -237,7 +237,7 @@ For example:
 .fi
 first reports that /dev/hdb5 has Id 6, and then changes that into 83.
 .TP
-.BR \-u ", " \-\-unit " \fI\letter\fR"
+.BR \-u ", " \-\-unit " \fIletter\fR"
 Interpret the input and show the output in the units specified by
 .IR letter .
 This \fIletter\fR can be one of S, C, B or M, meaning Sectors, Cylinders,
