--- a/sys-utils/pivot_root.8
+++ b/sys-utils/pivot_root.8
@@ -61,6 +61,7 @@ exec chroot . sh -c 'umount /old_root; exec /sbin/init' \\
 .BR chroot (1),
 .BR mount (8),
 .BR pivot_root (2),
+.BR switch_root (8),
 .BR umount (8)
 .SH AVAILABILITY
 The pivot_root command is part of the util-linux package and is available from
