--- a/sys-utils/pivot_root.8
+++ b/sys-utils/pivot_root.8
@@ -1,4 +1,4 @@
-.TH PIVOT_ROOT 8 "February 2000" "util-linux" "System Administration"
+.TH PIVOT_ROOT 8 "August 2011" "util-linux" "System Administration"
 .SH NAME
 pivot_root \- change the root filesystem
 .SH SYNOPSIS
@@ -32,6 +32,13 @@ device on the old root file system, keeping it busy. They can easily be
 changed when invoking \fBchroot\fP (see below; note the absence of
 leading slashes to make it work whether \fBpivot_root\fP has changed the
 shell's root or not).
+.SH OPTIONS
+.TP
+\fB\-V\fR, \fB\-\-version\fR
+Output version information and exit.
+.TP
+\fB\-h\fR, \fB\-\-help\fR
+Display help and exit.
 .SH EXAMPLES
 Change the root file system to /dev/hda1 from an interactive shell:
 .sp
