mount: remove superfluous "an" under ext4 mount options in mount.8
Signed-off-by: Frederik "Freso" S. Olesen <freso@freso.dk>

--- a/mount/mount.8
+++ b/mount/mount.8
@@ -1401,7 +1401,7 @@ Enable POSIX Access Control Lists. See the
 manual page.
 
 .SH "Mount options for ext4"
-The ext4 filesystem is an an advanced level of the ext3 filesystem which
+The ext4 filesystem is an advanced level of the ext3 filesystem which
 incorporates scalability and reliability enhancements for supporting large
 filesystem.
 
