lscpu: add --online option
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/sys-utils/lscpu.1
+++ b/sys-utils/lscpu.1
@@ -28,7 +28,10 @@ the defined order.
 .SH OPTIONS
 .TP
 .BR \-a , " \-\-all"
-Include online and offline CPUs in output.
+Include online and offline CPUs in output (default for -e)
+.TP
+.BR \-b , " \-\-online"
+Include only online CPUs in output (default for -p)
 .TP
 .BR \-e , " \-\-extended " \fI[=list]\fP
 Print CPU list out in human-readable format.
