agetty: add --nohints
Reported-by: "Gabor Z. Papp" <gzp@papp.hu>
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/term-utils/agetty.8
+++ b/term-utils/agetty.8
@@ -198,6 +198,9 @@ and the login prompt. Very useful in connection with the \-I option.
 Do not clear the screen before prompting for the login name
 (the screen is normally cleared).
 .TP
+\-\-nohints
+Do not print hints about Num, Caps and Scroll Locks.
+.TP
 \-\-nonewline
 Do not print a newline before writing out /etc/issue.
 .TP
