docs: chcpu and readprofile are sysadmin utils
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/sys-utils/chcpu.8
+++ b/sys-utils/chcpu.8
@@ -1,4 +1,4 @@
-.TH CHCPU 1 "August 2011" Linux "User Manuals"
+.TH CHCPU 8 "August 2011" "util-linux" "System Administration"
 .SH NAME
 chcpu \- CPU configuration utility
 .SH SYNOPSIS
