--- a/sys-utils/readprofile.8
+++ b/sys-utils/readprofile.8
@@ -1,5 +1,4 @@
-.TH READPROFILE 1 "May 1996" "util-linux" "User Commands"
-.UC 4
+.TH READPROFILE "8" "May 1996" "util-linux" "System Administration"
 .SH NAME
 readprofile - read kernel profiling information
 .SH SYNOPSIS
