blkid: fix unfinished sentence for -l option in blkid.8
Signed-off-by: Dave Reisner <dreisner@archlinux.org>

--- a/misc-utils/blkid.8
+++ b/misc-utils/blkid.8
@@ -101,7 +101,7 @@ Display I/O Limits (aka I/O topology) information.  The 'export' output format i
 automatically enabled.  This option can be used together with the \fB-p\fR option.
 .TP
 .B \-l
-Look up only one device that matches the search parameter specified with the
+Look up only one device that matches the search parameter specified with \fB-t\fR.
 .TP
 .B \-k
 List all known filesystems and RAIDs and exit.
