losetup: new -D option to delete all used loop devices
Signed-off-by: Petr Uzel <petr.uzel@suse.cz>
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/mount/losetup.8
+++ b/mount/losetup.8
@@ -24,6 +24,12 @@ Delete loop:
 .IR loopdev ...
 .sp
 .in -5
+Delete all used loop devices:
+.sp
+.in +5
+.B "losetup \-D"
+.sp
+.in -5
 Print name of first unused loop device:
 .sp
 .in +5
