docs: add prlimit to the TODO file
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/Documentation/TODO
+++ b/Documentation/TODO
@@ -1,6 +1,10 @@
 
  Note that items with (!) have high priority.
 
+prlimit
+-------
+  - add new command line wrapper for prlimit(2)
+
 dmesg
 -----
 
